[package]
name = "mutex_logger"
version = "0.1.0"
edition = "2021"
authors = ["LiorBuch"]
description = "a crate for a logger that usess mutex for thread safty"
license = "MIT"
repository = "https://github.com/LiorBuch/MutexLogger"
license-file= "LICENSE.txt"
readme = "README.md"
keywords = ["logs","logger","log","mutex","thread_safe"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"